# gitja

./: .gitignore  CNAME  Cargo.toml  DOCUMENTATION.md  DOCUMENTATION.rst  LICENSE  Makefile  README.rst  cabal.project  config.dhall  default.nix  description  docs.rst  gitja.cabal  gitserve.cabal  index.html  stack.yaml
.github/workflows/: ci.yaml  haskell.yml
gitja/: index.html  log.html  refs.html  tree.html
gitja/file/: DOCUMENTATION.md.html  LICENSE.html  Makefile.html  README.rst.html  Setup.hs.html  config.dhall.html  description.html  github.FUNDING.yml.html  github.workflows.ci.yaml.html  gitignore.html  gitja.cabal.html  src.Env.hs.html  src.Index.hs.html  src.Main.hs.html  src.Repositories.hs.html  src.Templates.hs.html  src.Types.hs.html  src.config.dhall.html  stack.yaml.html  stack.yaml.lock.html  templates.README.rst.html  templates.base.index.html.html  templates.base.repo.commit.html.html  templates.base.repo.file.html.html  templates.base.repo.index.html.html  templates.base.repo.refs.html.html  templates.base.repo.tree.html.html  templates.base.style.css.html  templates.base.template.html.include.html  templates.docs.index.html.html  templates.docs.repo.commit.html.html  templates.docs.repo.file.html.html  templates.docs.repo.index.html.html  templates.docs.repo.log.html.html  templates.docs.repo.refs.html.html  templates.docs.repo.tree.html.html  templates.docs.showdown.min.js.html  templates.docs.style.css.html  templates.docs.template.html.include.html  templates.stagit.index.html.html  (+33 more)
gitserve/: index.html  log.html  refs.html  tree.html
gitserve/file/: .github.FUNDING.yml.html  .github.html  .github.workflows.ci.yaml.html  .github.workflows.html  .gitignore.html  DOCUMENTATION.md.html  LICENSE.html  Makefile.html  README.rst.html  Setup.hs.html  cabal.project.html  config.dhall.html  description.html  github.FUNDING.yml.html  github.html  github.workflows.ci.yaml.html  github.workflows.html  gitignore.html  gitserve.cabal.html  src.Config.hs.html  src.Env.hs.html  src.Index.hs.html  src.Main.hs.html  src.Repositories.hs.html  src.Templates.hs.html  src.Types.hs.html  src.config.dhall.html  src.html  stack.yaml.html  stack.yaml.lock.html  templates.README.rst.html  templates.base.html  templates.base.index.html.html  templates.base.repo.commit.html.html  templates.base.repo.file.html.html  templates.base.repo.html  templates.base.repo.index.html.html  templates.base.repo.refs.html.html  templates.base.repo.tree.html.html  templates.base.style.css.html  (+62 more)
src/: Config.hs  Env.hs  Index.hs  Main.hs  Repositories.hs  Templates.hs  Types.hs  config.dhall  main.rs
templates/: README.rst  branches.html  commit.html  file.html  index-main.html  index.html  log.html  refs.html  repo-table-header.html.include  style.css  tags.html  template.html.include  tree.html
templates/base/: index.html  style.css  template.html.include
templates/base/repo/: commit.html  file.html  index.html  refs.html  tree.html
templates/docs/: index.html  style.css  template.html.include
templates/docs/repo/: commit.html  file.html  index.html  log.html  refs.html  tree.html
templates/repo/: repo-table-header.html.include  tree.html
templates/stagit/: index.html  style.css
templates/stagit/repo/: commit.html  file.html  index.html
test/: config.dhall  test.sh
test/expected/: index.html  link.html
test/expected/gitja/: index.html
test/expected/gitja/file/: github.FUNDING.yml.html  test.templates.so_called_binary_file.html  test.templates.style.css.html
test/expected/gitserve/: index.html
test/expected/gitserve/file/: github.FUNDING.yml.html  test.expected.gitserve.file.html  test.templates.html  test.templates.so_called_binary_file.html  test.templates.style.css.html
test/expected/gitserve/static/: another_file
test/templates/: index.html  title.html.include
test/templates/repo/: commit.html  file.html  index.html
test/templates/static/: a_nice_file
