name:                gitja
version:             0.3.0.0
synopsis:            ðŸ™ Templated web page generator for your git repositories
description:         ðŸ™ Templated web page generator for your git repositories
homepage:            https://github.com/m-col/gitja#readme
bug-reports:         https://github.com/m-col/gitja/issues
license:             BSD3
license-file:        LICENSE
author:              Matt Colligan
maintainer:          mcol@posteo.net
copyright:           2021 Matt Colligan
category:            Web, Git
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.rst

executable gitja
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Index, Env, Repositories, Templates, Types, Paths_gitja
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , conduit
                     , bytestring
                     , data-default
                     , dhall
                     , directory
                     , exceptions
                     , extra
                     , file-embed
                     , filepath
                     , ginger >= 0.10.4.0
                     , gitlib
                     , gitlib-libgit2
                     , hlibgit2
                     , optparse-applicative
                     , path
                     , path-io >= 1.3.0
                     , tagged
                     , text
                     , transformers
                     , unliftio-core
                     , unordered-containers
                     , utf8-string
