name:                gitserve
version:             0.1.0.0
-- synopsis:
description:         Dynamic/static git web page server/generator
homepage:            https://github.com/m-col/gitserve#readme
license:             BSD3
license-file:        LICENSE
author:              Matt Colligan
maintainer:          mcol@posteo.net
copyright:           2021 Matt Colligan
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.rst

executable gitserve
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Config, Repositories, Templates
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , dhall
                     , directory
                     , filepath
                     , ginger
                     , gitlib
                     , gitlib-libgit2
                     , tagged
                     , text
