name:                gitserve
version:             0.1.0.0
-- synopsis:
description:         Dynamic/static git web page server/generator
homepage:            https://github.com/m-col/gitserve#readme
license:             BSD3
license-file:        LICENSE
author:              Matt Colligan
maintainer:          mcol@posteo.net
copyright:           2021 Matt Colligan
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.rst

executable gitserve
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Config, Index, Repositories, Templates, Types, Paths_gitserve
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , conduit
                     , data-default
                     , dhall
                     , directory
                     , filepath
                     , ginger >= 0.10.3
                     , gitlib
                     , gitlib-libgit2
                     , optparse-applicative
                     , path
                     , path-io
                     , tagged
                     , text
                     , transformers
                     , unordered-containers
                     , utf8-string
