name:                gitserve
version:             0.2.0.0
synopsis:            ðŸ™ Templated web page generator for your git repositories
description:         ðŸ™ Templated web page generator for your git repositories
homepage:            https://github.com/m-col/gitserve#readme
bug-reports:         https://github.com/m-col/gitserve/issues
license:             BSD3
license-file:        LICENSE
author:              Matt Colligan
maintainer:          mcol@posteo.net
copyright:           2021 Matt Colligan
category:            Web, Git
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.rst

executable gitserve
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Config, Index, Repositories, Templates, Types, Paths_gitserve
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , conduit
                     , data-default
                     , dhall
                     , directory
                     , filepath
                     , ginger >= 0.10.3.0
                     , gitlib
                     , gitlib-libgit2
                     , optparse-applicative
                     , path
                     , path-io
                     , tagged
                     , text
                     , transformers
                     , unordered-containers
                     , utf8-string
